--- a/lebc_hubspot_customise.css
+++ b/lebc_hubspot_customise.css
@@ -1,3 +1,7 @@
 #hs-cmsf-branding {
-  display: none;
+  display: none !important;
+}
+
+#hs-cmsf-branding .hs-cmsf-branding__button {
+  display: none !important;
 }
