--- a/lebc_hubspot_customise.css
+++ b/lebc_hubspot_customise.css
@@ -1,7 +1,10 @@
 #hs-cmsf-branding {
   display: none !important;
+  visibility: none !important:
 }
 
 #hs-cmsf-branding .hs-cmsf-branding__button {
   display: none !important;
+    visibility: none !important:
+
 }
